--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.3.0"
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.3.0",
+    "flowbite": "1.6.5",
+    "tailwindcss": "^3.3.1"
   }
 }
